fix: scrollbar edited

--- a/src/index.css
+++ b/src/index.css
@@ -24,20 +24,24 @@ body::-webkit-scrollbar {
 }
 
 .contact-bar::-webkit-scrollbar {
-      width: 2px; 
-   }
+    width: 2px;
+}
 
 .contact-bar::-webkit-scrollbar-track {
     background-color: #f5f5f5;
-  }
+}
 
 .contact-bar::-webkit-scrollbar-thumb {
     background: #b5b5b5;
     border-radius: 25px;
-  }
+}
+
+.contact-bar::-webkit-scrollbar-thumb:hover {
+    background: #918f8f;
+}
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
